Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135694

QDoc: no warning about missing \class documentation

XMLWordPrintable

    • 76fac13ef (dev)
    • DaVinci 119, DaVinci 120

      Given documented class members but a missing \class topic, QDoc happily marks all member docs as \internal, doesn't warn, and generates no output.

        For Gerrit Dashboard: QTBUG-135694
        # Subject Branch Project Status CR V

            treinio Topi Reiniö
            treinio Topi Reiniö
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes