qdoc: Issue warnings for undocumented classes with documented members

After parsing all documentation comments, QDoc traverses though the
node tree and recursively marks all undocumented nodes as 'internal'.

This process did not check whether an undocumented aggregate node
(class or QML type) has documented members. This lead to a situation
where forgetting to document a \class or a \qmltype lead QDoc to
silently ignore the documentation for the type's members.

Add this check, document the new warning in QDoc manual, and add a
simple test project that produces these warnings.

Fixes: QTBUG-135694
Change-Id: I34b77171e7a1fa3a1372aa93ad344885b2abb744
Reviewed-by: David Boddie <david.boddie@qt.io>
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>