src/qdoc/qdoc/tests/validateqdocoutputfiles/testdata/undocumented_class/src/class.cpp
@@ -1,0 +1,18 @@
+// Copyright (C) 2025 The Qt Company Ltd.
+// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GFDL-1.3-no-invariants-only
+
+#include "class.h"
+
+/*!
+    A member function of a class that happens to be undocumented.
+ */
+void TestClass::method() {}
+
+/*!
+    \fn void globalFunc()
+    \relates TestClass
+*/
+
+/*!
+    \variable TestClass::i
+*/
